--- a/styles.css
+++ b/styles.css
@@ -8,18 +8,39 @@
 #playerScoreTitle {
   grid-column: 1/2;
   grid-row: 1/2;
+
+  display: grid;            
+  align-items: center;      
+  justify-items: center;
+
+  font-family: sans-serif;
+  font-size: 32px;
 }
 
 
 #title {
   grid-column: 2/3;
   grid-row: 1/2;
+
+  display: grid;            
+  align-items: center;      
+  justify-items: center;
+
+  font-family: sans-serif;
+  font-size: 48px;
 }
 
 
 #compScoreTitle {
   grid-column: 3/4;
   grid-row: 1/2;
+
+  display: grid;            
+  align-items: center;      
+  justify-items: center;
+
+  font-family: sans-serif;
+  font-size: 32px;
 }
 
 
@@ -40,6 +61,9 @@
 #display {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
+
+  font-family: sans-serif;
+  font-size: 24px;
 
   display: grid;            
   align-items: center;      
@@ -71,7 +95,7 @@
 }
 
 button {
-  background-color: #4CAF50; /* Green */
+  background-color: #8ea4de; /* Green */
   border: 1px solid black ;
   color: white;
   padding: 15px 32px;
